lagt till böckerna

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
 	<meta charset="utf-8">
 	<link href="resources/css/style.css" type="text/css" rel="stylesheet">
-	<title>CourseNotes</title>
+	<title>Kurslitteratur Malmö</title>
 
 </head>
 
 <body>
 	<header>
-		<h1>CourseNotes</h1>
+		<h1>Kurslitteratur Malmö</h1>
 	</header>
 	<section>
-		
+		<p>Böckernas namn:</p>
 	</section>
 	<footer>
 	</footer>
