toggle function, not working

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <body>
 	<header>
-		<h1>Kurslitteratur Malmö</h1>
+		<h1 class="course">Kurslitteratur Malmö</h1>
 	</header>
 	<section>
-		<p>Böckernas namn:</p>
+		<h3>Böckernas namn:</h3>
+		<p></p>
 	</section>
 	<footer>
 	</footer>
